# learnopengl-cmake-template

./: CMakeLists.txt  README.md
src/: main.cpp
